--- a/.github/workflows/android-apk-build.yml
+++ b/.github/workflows/android-apk-build.yml
@@ -6,15 +6,12 @@ on:
     branches:
       - main
     paths:
-      - "HappyStateApp/**"
+      - "**"
       - ".github/workflows/android-apk-build.yml"
 
 jobs:
   build-android:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: HappyStateApp
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,7 +21,7 @@ jobs:
         with:
           node-version: 20
           cache: npm
-          cache-dependency-path: HappyStateApp/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install deps
         run: npm ci
