--- a/.github/workflows/android-apk-build.yml
+++ b/.github/workflows/android-apk-build.yml
@@ -31,4 +31,4 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Build APK (EAS preview profile)
-        run: eas build --platform android --profile preview --non-interactive
+        run: eas build --platform android --profile preview --non-interactive --clear-cache
