--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~54.0.33",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "firebase": "^12.10.0",
     "idb": "^8.0.3",
